css/index.css
/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
* {
    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
}

body {
    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
    background-color:#E4E4E4;
    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
    background-image:-webkit-gradient(
        linear,
        left top,
        left bottom,
        color-stop(0, #A7A7A7),
        color-stop(0.51, #E4E4E4)
    );
    background-attachment:fixed;
    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
    font-size:12px;
    height:100%;
    margin:0px;
    padding:0px;
    text-transform:uppercase;
    width:100%;
}

.container{
    width: 95%;
    margin: 0 auto;
}

/* Landscape layout (with min-width) */
@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
    .app {
        background-position:left center;
        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
                                      /* offset horizontal: half of image width and text area width */
    }
}

h1 {
    font-size:2em !important;
    font-weight:normal;
    margin:0px;
    overflow:visible;
    padding:0px;
    text-align:center;
}

h4{
    font-size: 1.5em !important;
}

label{
    font-size: 1.2em !important;
}

input{
    /* increase height of input field */
    font-size: 1.5em !important;
}

/* custom styling for listview and checkbox */
.custom-checkbox{
    /* important keyword must be used to override the higher specificity weights inside jquery-mobile css selectors*/
    border-top-width: 0px !important;
    border-bottom-width: 0px !important;
    border-left-width: 0px !important;
    border-right-width: 0px !important;
    margin-top: 0px !important;
    margin-bottom: 0px !important;
}

.no-offsets{
    /* important keyword must be used to override the higher specificity weights inside jquery-mobile css selectors*/
    margin: 0 !important;
    padding: 0 !important;
}

.picked-item{
    text-decoration: line-through !important;
}

/* footer styling */
#foot{
    padding-left: 1%;
    padding-top: 2%;
    padding-bottom: 2%;
}

#new-item-form .ui-input-text{
    /* Set width of input text properly. */
    width: 80%;
}

#new-item-form .ui-input-btn{
    /* button width is typicall function of value of attribute 'value' of th input button. increase its width properly. */
    width: 40%;
}

/* Media Queries */
@media screen and (min-width:600px){
    #new-item-form .ui-input-text{
        width: 40%;
        float: left;
        margin-right: 2%;
    }

    #new-item-form .ui-input-btn{
        width: 30%;
        float: left;
    }
}

